# MangaSplitter

./: .gitignore  README.md  main.py  manga split.py  manga_split.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/manga_split/: __init__.py  __main__.py  _manga_split.py
test/: test_manga_split.py
